[tool.poetry]
name = "test-python"
version = "0.2.0"
description = ""
authors = ["Matias Cañete <matiascaniete@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
icecream = "^2.1.3"
loguru = "^0.7.2"
rich = "^13.9.4"
argparse = "^1.4.0"
tqdm = "^4.66.6"
seaborn = "^0.13.2"
pydantic = "^2.9.2"
fastapi = "^0.115.4"
httpx = "^0.27.2"

[tool.poetry.scripts]
test-py = "test_python.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
